--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,21 +42,23 @@
                 android:layout_gravity="end"
                 android:layout_marginRight="18dp"
                 android:padding="0dp"
-                android:src="@drawable/user_vector" />
+                android:src="@drawable/ic_user_vector" />
 
         </com.google.android.material.appbar.MaterialToolbar>
+
+
 
     </com.google.android.material.appbar.AppBarLayout>
 
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="24dp"
-        android:background="@color/white"
+        android:backgroundTint="#ABFFFFFF"
         android:text="Thêm bộ thẻ"
         android:textColor="@color/text_color"
         app:cornerRadius="20dp"
@@ -64,12 +66,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
-        style=""
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="8dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginTop="180dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,26 +80,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2"
         app:layout_constraintVertical_bias="1.0" />
-
-    <!--
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="0dp">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_main"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/toolbar_bg"
-            android:title="Trang chủ"
-            app:titleTextColor="@android:color/white" />
-
-    </LinearLayout>
-    -->
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
