--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="210dp"
+        android:layout_height="wrap_content"
         android:id="@+id/recCard"
         app:cardElevation="8dp"
         app:cardCornerRadius="16dp"
@@ -15,7 +15,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="210dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:weightSum="5.5">
 
@@ -25,7 +25,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="4"
                 android:scaleType="centerCrop"
-                android:src="@drawable/number" />
+                android:src="@drawable/numbers" />
 
             <TextView
                 android:id="@+id/recDeckName"
@@ -54,7 +54,7 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginBottom="10dp"
                     android:padding="0dp"
-                    android:src="@drawable/download_vector" />
+                    android:src="@drawable/ic_download_vector" />
 
 
                 <LinearLayout
@@ -88,23 +88,6 @@
                 </LinearLayout>
 
 
-<!--                <LinearLayout-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.7"-->
-<!--                    android:gravity="end"-->
-<!--                    android:orientation="horizontal">-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="Language"-->
-<!--                        android:id="@+id/recLang"-->
-<!--                        android:textColor="@color/primary_color"-->
-<!--                        android:textSize="18sp"-->
-<!--                        android:textAlignment="center"/>-->
-
-<!--                </LinearLayout>-->
             </LinearLayout>
 
 
