--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -25,7 +25,7 @@
                 android:layout_height="100dp"
                 android:layout_weight="4"
                 android:scaleType="centerCrop"
-                android:src="@drawable/numbers" />
+                android:src="@drawable/img_numbers" />
 
             <TextView
                 android:id="@+id/recDeckName"
