--- a/app/src/main/res/layout-sw600dp/fragment_flashcard.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_flashcard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_color"
-    tools:context=".FlashcardFragment">
+    tools:ignore="MissingDefaultResource">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
