--- a/app/src/main/res/layout-sw600dp/fragment_statistics.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_statistics.xml
@@ -5,7 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_color">
+    android:background="@color/background_color"
+    tools:context=".StatisticsFragment"
+    tools:ignore="MissingDefaultResource">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
